# MStoCIRC2

./: .gitattributes  .gitignore  LICENSE  README.md  conda_env.yaml  pyproject.toml  requirements.txt
docs/: output-reference.md
examples/input/: canonical_protein.fasta  circRNA_sequences.fasta  design.txt  peptide.tsv  peptide_matrix.tsv
examples/output/dea/: correlation_groupA.tsv  correlation_groupB.tsv  dea_results.tsv  enrichment_groupA_go_BP.tsv  enrichment_groupA_go_CC.tsv  enrichment_groupA_go_MF.tsv  enrichment_groupA_kegg.tsv  enrichment_groupB_go_BP.tsv  enrichment_groupB_go_CC.tsv  enrichment_groupB_go_MF.tsv  enrichment_groupB_kegg.tsv  peptide_filter_report.tsv  protein_quant.tsv  protein_quant_imputed.tsv  proxy_genes_groupA.tsv  proxy_genes_groupB.tsv  rollup_summary.tsv  run_metadata.json
examples/output/eval/: all_circRNA_ires.fasta  all_circRNA_m6a_pred.txt  all_circRNA_m6a_windows.fasta  circ_predict.txt  diamond_peptides_query.fasta  eval_diamond_protein_db.dmnd  ms_sample_orf_identification.txt  peptide_line.txt  tsv_result_remove_line.txt
examples/output/orf/: circRNA_ORF_mapping.tsv  circRNA_all_ORF.fasta  circRNA_bsj_corf.fasta  circRNA_bsj_corf_nt.fasta  circRNA_full_length.fasta
src/mstocirc2/: __init__.py  cli.py  cli_ui.py  fragpipe_workflows.py  integrated_pipeline.py
src/mstocirc2/core/: __init__.py  exceptions.py  logging_utils.py  paths.py  process.py
src/mstocirc2/differential_expression/: __init__.py  command_runner.py  directlfq_bridge.py  expression_io.py  expression_visualizer.py  functional_enrichment.py  homology_refining.py  intensity_aggregator.py  kegg_organisms.json  kegg_registry.py  missing_value_imputer.py  mrna_coexpression.py  r_runtime_bridge.py  statistical_dea.py  workflow_strategy.py
src/mstocirc2/orf_prediction/: bsj_truncator.py  circular_translator.py  command_runner.py  genetic_codes.py  genome_extractor.py  linear_homology.py  (+1 more)
(+22 files in other folders)
